--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,13 +6,8 @@
 
 .mb-80{
   margin-bottom: 80px;
-}
-
-.edu-bg-image {
-  position: absolute;
-  left: 0;
-  top: 245px;
-  z-index: -1;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 .hover-shadow {
