--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,26 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif+KR&display=swap');
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Roboto:300,400,500,700");
-@font-face {
-  font-family: 'BwNistaInt-xBd';
-  src: url("../fonts/BwNistaInt-xBd.woff") format("woff");
-  font-style: normal;
-  font-display: swap;
-}
-
-
-.font-secondary {
-  font-family: "Playfair Display", serif !important;
-}
-
-.section{
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-
-.section-title {
-  margin-bottom: 80px;
-  font-family: "BwNistaInt-xBd";
-}
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap");
 
 html{
   overflow-x: hidden;
@@ -30,7 +9,7 @@ body {
   color: #4c4c4c;
   line-height: 1.2;
   overflow-x: hidden;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Nanum Myeongjo', serif;
   font-size: 15px;
   -webkit-font-smoothing: antialiased;
 }
@@ -41,22 +20,42 @@ p, .paragraph {
   color: #4c4c4c;
   font-size: 15px;
   line-height: 1.8;
-  /* font-family: "Roboto", sans-serif; */
-  font-family: "Playfair Display", serif;
+  font-family: 'Nanum Myeongjo', serif;
 }
 
-p-lg, .paragraph-lg {
+.paragraph-lg {
   font-size: 22px;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #000;
-  font-family: "Playfair Display", serif;
+  font-family:  'Nanum Myeongjo', serif;
   line-height: 1.2;
 }
 
-h1 {
-  font-size: 80px;
+.font-secondary {
+  font-family: 'Nanum Myeongjo', serif;
+}
+
+.section{
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.section-title {
+  margin-bottom: 80px;
+  /* font-family:  'Playfair Display', serif; */
+}
+
+.page-title{
+  padding: 300px 0 70px;
+}
+
+.edu-bg-image {
+  position: absolute;
+  left: 0;
+  top: 245px;
+  z-index: -1;
 }
 
 @media (max-width: 991px) {
@@ -71,8 +70,12 @@ h1 {
   }
 }
 
+h1 {
+  font-size: 80px;
+}
+
 h2 {
-  font-size: 60px;
+  font-size: 50px;
 }
 
 h3 {
