--- a/src/components/header-footer.module.css
+++ b/src/components/header-footer.module.css
@@ -4,6 +4,10 @@
   background-color: #ffffff;
 }
 
+.nus-logo{
+  margin-right: auto;
+}
+
 /* For the decrease size animation */
 /* Below need to work with Javascript */
 .navigation-scrolled {
@@ -40,7 +44,7 @@
 
 .nested-link:hover {
   text-decoration: none;
-  color: #555;
+  color: black;
 }
 
 .nested-link{
@@ -103,7 +107,7 @@
   100% {
     width: 100%;
     height: 100%;
-    background: #333;
+    background: black;
   }
 }
 
@@ -111,7 +115,7 @@
   0% {
     width: 100%;
     height: 100%;
-    background: #333;
+    background: black;
   }
   50% {
     width: 100%;
