--- a/src/components/header-footer.module.css
+++ b/src/components/header-footer.module.css
@@ -8,8 +8,11 @@
   margin-right: auto;
 }
 
+.social-media > li{
+  display: inline-block;
+}
+
 /* For the decrease size animation */
-/* Below need to work with Javascript */
 .navigation-scrolled {
   background-color: #ffffff;
   transition: .3s ease;
