--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,13 +2,11 @@
 @import url("https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap");
 
 html{
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 body {  
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   color: #4c4c4c;
   line-height: 1.2;
   font-family: 'Nanum Myeongjo', serif;
